# typed-wire

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  typed-wire.cabal
app/: Main.hs
samples/: Basic.tywi  Other.tywi
scripts/: deploy-hackage.sh
src/TW/: Ast.hs  BuiltIn.hs  Check.hs  JsonRepr.hs  Loader.hs  Parser.hs  Types.hs  Utils.hs
src/TW/CodeGen/: Elm.hs  Flow.hs  Haskell.hs  PureScript.hs
support/elm/: Lib.elm
support/haskell/: Lib.hs
test/: Test.hs
test/TW/CodeGen/: HaskellTest.hs  PureScriptTest.hs
