name:                typed-wire
version:             0.3.1.1
synopsis:            Language-independent type-safe communication
description:         Please see README.md
homepage:            http://github.com/typed-wire/typed-wire#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann <mail@athiemann.net>
category:            Web
build-type:          Simple
extra-source-files:
    README.md
cabal-version:       >=1.10
tested-with:         GHC==7.10.2

library
  hs-source-dirs:      src
  exposed-modules:
                  TW.Parser,
                  TW.Ast,
                  TW.Loader,
                  TW.Check,
                  TW.BuiltIn,
                  TW.JsonRepr,
                  TW.CodeGen.Elm,
                  TW.CodeGen.Haskell,
                  TW.CodeGen.PureScript,
                  TW.Types,
                  TW.Utils
  build-depends:
                base >= 4.7 && < 5,
                text >= 1.2,
                parsec >=3.1,
                mtl >=2.2,
                containers >=0.5,
                directory >=1.2,
                filepath >=1.4,
                http-types >=0.8.6
  default-language:    Haskell2010

executable twirec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                base >= 4.7 && < 5,
                typed-wire,
                text >= 1.2,
                optparse-applicative,
                filepath >=1.4,
                gitrev >=1.1,
                directory >=1.2
  default-language:    Haskell2010

test-suite typed-wire-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  other-modules:
    TW.CodeGen.HaskellTest
    TW.CodeGen.PureScriptTest
  build-depends:
                base
              , aeson
              , typed-wire
              , HTF >=0.13
              , temporary >=1.1
              , text >=1.2
              , filepath >=1.4
              , directory >=1.2.2
              , process >=1.2
              , bytestring >=0.10
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/typed-wire/typed-wire
